syntax = "proto3";

//this file is generated by gsync, do not modify it manually !!!
option go_package = "../pbgenv1";

import "ColorType.proto";
import "Person.proto";
import "protosync.options.proto";
message Test{
  option (sync_gen) = true;
  optional int32 id = 1;
  optional uint32 u32 = 2;
  optional int64 i64 = 3;
  optional uint64 u64 = 4;
  optional bool b = 5;
  optional ColorType e = 6;
  optional string str = 7;
  optional Person obj = 22;
  repeated int32 i32Arr = 8;
  repeated uint32 u32Arr = 9;
  repeated int64 i64Arr = 10;
  repeated uint64 u64Arr = 11;
  repeated bool boolArr = 12;
  repeated ColorType enumArr = 13;
  repeated string strArr = 14;
  map<int32,TestI32Map> i32Map = 15;
  map<uint32,TestU32Map> u32Map = 16;
  map<int64,TestI64Map> i64Map = 17;
  map<uint64,TestU64Map> u64Map = 18;
  map<bool,TestBoolMap> boolMap = 19;
  map<string,TestStringMap> strMap = 21;
  optional float f32 = 23;
  optional double f64 = 24;
  repeated float f32Arr = 25;
  repeated double f64Arr = 26;
}

message TestBoolMap{
  option (sync_key) = 1;
  optional bool id = 1;
  optional string addition = 2;
}

message TestI32Map{
  option (sync_key) = 1;
  optional int32 id = 1;
  optional string addition = 2;
}

message TestI64Map{
  option (sync_key) = 1;
  optional int64 id = 1;
  optional string addition = 2;
}

message TestStringMap{
  option (sync_key) = 1;
  optional string id = 1;
  optional string addition = 2;
}

message TestU32Map{
  option (sync_key) = 1;
  optional uint32 id = 1;
  optional string addition = 2;
}

message TestU64Map{
  option (sync_key) = 1;
  optional uint64 id = 1;
  optional string addition = 2;
}
